@@ -1,3 +1,11 @@
+2012-12-04 Paulo Andrade <pcpa@gnu.org>
+
+	* include/lightning/jit_mips.h, lib/jit_mips.c: Update to
+	make the mips backend compile in a qemu image.
+
+	* lib/jit_ppc.c: Minor adaptations to help in having the
+	ppc backend compilable.
+
 2012-12-03 Paulo Andrade <pcpa@gnu.org>
 
 	* configure.ac, include/lightning/jit_private.h, lib/jit_arm-cpu.c,
